--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,15 +7,25 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fd8f55;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffcfb5;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #df5b14;
 }
